2003-08-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinWm.c: Back port of wm iconbitmap
	feature from Tk 8.4. This feature provides the
	ability to set a Windows icon for toplevel
	windows.

2003-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkBind.c (TkpGetBindingXEvent): Add helper method
	that can be used to query the XEvent* for the currently
	executing binding.
	* generic/tkInt.h: Declare TkpGetBindingXEvent.
	* win/tkWinMenu.c (MenuKeyBindProc, TkWinMenuKeyObjCmd,
	TkpInitializeMenuBindings): Rename MenuKeyBindProc to
	TkWinMenuKeyObjCmd and convert it into a Tcl command
	named tk_tkWinMenuKey. Bind keyboard accelerator
	actions to this Tcl command instead of using a native
	C binding so that user code can manipulate the binding
	in Tcl code.
	[Source-Navigator bug 570080]

2003-03-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkImgPhoto.c (ImgPhotoCmd):
	* generic/tkMenu.c (MenuWidgetObjCmd): Remove
	unused local variables which made the compile
	fail under VC++ when --enable-symbols is passed.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/tkWinPort.h: Define ALWAYS_SHOW_SELECTION
	so that the selected highlight is shown when
	multiple windows can display a selection.

2003-02-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkEvent.c (Tk_HandleEvent): Fixup button
	press state saving code, it was incorrectly converting
	normal motion events into button press and motion
	events in some cases.
	* generic/tkInt.h: Add mouseButtonWindow member
	to the TkDisplay structure.
	* tests/event.test: Add test case for faulty
	button motion logic.

2003-02-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/Makefile.in:
	* win/Makefile.in: Add TCL_DBGX so that the
	build works with --enable-symbols.

2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* win/configure: Regen.
	* win/configure.in: Set CC and CFLAGS when
	compiling with VC++. Call AC_CANONICAL_HOST.
